  - Action links can't be changed, added or removed, add all links and use ignore_method to control when they are displayed
  - Require using active_scaffold_config.override_columns to exclude or add columns
- Thread safety enabled by default, can't be disabled, deprecate ActiveScaffold.threadsafe!

= 3.7.11
- Add partial list_messages_content to reduce code duplication, and better support replacing list view with other way to render records
- Support selector for records body in create_record_row JS method, better support replacing list view with other way to render records
- Improve detection of member action links when list view is replaced with other structure, based on 'record' html class, instead of tags
- Support :table position for member action links, replacing the whole table
- Support changing the view partial used to render a record, default to 'list_record', better support refreshing a record when list view is replaced with other way to render records
- Support separators in action links
- Support :popup position, using jquery-ui dialog, but can be replaced with other library overriding ActiveScaffold.open_popup and ActiveScaffold.close_popup JS functions
- Use column.label in human conditions, same as form
- Don't overlap 'click to reset' with long human conditions message

= 3.7.10
- Move code from on_create.js.erb to partials, so it's easier to change parts, e.g. how new record is rendered
- Don't reload after deleting last record if pagination is disabled

= 3.7.9
- Add css_class to action links, to avoid changing name, it may result confusing, deprecate name setter.
- Add buttons to check all and uncheck all on :select form ui for collection associations, and draggable lists (active_scaffold_checkbox_list).
- Add hidden field with locking column in base_form partial for persisted records automatically, if model uses optimistic locking.
- Add on_stale_object_error when StaleObjectError is rescued, to allow customization.