@@ -19,27 +19,9 @@
     <% key, value = pair.split('=', 2).map { |str| Rack::Utils.unescape(str) } -%>
     <%= hidden_field_tag(key, value) %>
   <% end -%>
-  
-  <ol class="form">
-    <% visibles, hiddens = visibles_and_hiddens(active_scaffold_config.field_search) %>
-    <% visibles.each do |column| -%>
-      <li class="form-element <%= column.css_class unless column.css_class.is_a?(Proc) %>"><%= search_attribute(column, @record) %></li>
-    <% end -%>
-    <% unless hiddens.empty?  -%>
-      <li class="sub-section">
-      <% further_options_id = sub_section_id(sub_section: 'further_options') %>
-      <h5>
-        <%= as_(:optional_attributes) %>
-        <%= link_to_visibility_toggle(further_options_id, default_visible: false) %>
-      </h5>
-      <ol id ="<%= further_options_id %>" class="form" style="display:none;">
-      <% hiddens.each do |column| -%>
-        <li class="form-element <%= column.css_class unless column.css_class.is_a?(Proc) %>"><%= search_attribute(column, @record) %></li>
-      <% end -%>
-      </ol>
-      </li>
-  <% end -%>
-  </ol>
+
+  <%= render 'field_search_columns', columns: active_scaffold_config.field_search.columns %>
+
   <p class="form-footer">
     <%
       reset_attrs = {class: 'reset'}
